--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+ 
     <title>To do List</title>
 </head>
 
 <body>
     <div class="container">
-        <input class="input-task" placeholder="O que tenho que fazer...">
-        <button class="btn-add-task">Adicionar</button>
+        <div class="div-tasks">
+            <input class="input-task" placeholder="O que tenho que fazer...">
 
-        <ul class="list-task">
-            
-        </ul>
+            <button class="btn-add-task">Adicionar</button>
+         
+        </div>
+        <ul class="list-task"></ul>
     </div>
 </body>
 <script src="scripts.js"></script>
